Fixed Bugs and fixed Infinite Scrolling and sorting logic. Implemented the second screen

--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,19 +3,9 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
     <android.abhik.popularmovies.SquareImageView
         android:id="@+id/picture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        style="@style/movieImage"/>
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:layout_gravity="bottom"
-        android:textColor="@android:color/white"
-        android:background="#55000000"/>
+        style="@style/movieTitle"/>
 </FrameLayout>
